@@ -8,3 +8,9 @@ form.new_feedback {
     padding-right: 10px;
   }
 }
+
+p.note{
+  font-weight:bold;
+  font-size: 16px;
+  width: 70%;
+}
