@@ -1,6 +1,8 @@
 2.9.0-dev
 --------------------
-68594216 - Treat family court as county court when choosing what leaflets to display
+* 68594216 - Treat family court as county court when choosing what leaflets to display
+* 70953704 - Change feedback form to direct to court complaint instructions
+
 2.8.0
 --------------------
 * JSON-LD API: use better media type application/ld+json
